--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jquery": "^3.3.1",
     "ng-block-ui": "^2.0.0-beta.3",
     "ng2-charts": "^1.6.0",
+    "ngx-modal-dialog": "^3.0.0",
     "particles.js": "^2.0.0",
     "popper.js": "^1.14.4",
     "rxjs": "~6.3.3",
