--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.7",
     "@fortawesome/free-solid-svg-icons": "^5.4.2",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@ngx-progressbar/core": "^5.2.1",
     "@ngx-progressbar/http": "^5.2.1",
     "@ngx-progressbar/router": "^5.2.1",
